--- a/app/core/templates/index.html
+++ b/app/core/templates/index.html
@@ -5,81 +5,79 @@
 <div class="container-fluid p-0">
     <div class="row">
         {% for product in products %}
-        <div class="col-12 col-md-4 col-lg-4">
-            <div class="card">
-                <div id="carouselIndicators{{ product }}" class="carousel slide" data-bs-ride="carousel">
-                    <ol class="carousel-indicators">
-                        {% for photo in product.photos.all %}
-                            <li data-bs-target="#carouselIndicators{{ product }}" data-bs-slide-to="{{ forloop.counter0 }}"
-                                {% if photo.default %}
-                                    class="active" aria-current="true"
-                                {% endif %}
-                            ></li>
-                        {% endfor %}
-                    </ol>
-                    <div class="carousel-inner">
-                        {% for photo in product.photos.all %}
-                            <div class="carousel-item {% if photo.default %}active{% endif %}">
-                                <img class="d-block w-100" src="{{ photo }}" alt="{{ product.name }}">
-                            </div>
-                        {% endfor %}
-                    </div>
-
-                    {% if product.photos.all|length > 1 %}
-                        <a class="carousel-control-prev" href="#carouselIndicators{{ product }}" role="button" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselIndicators{{ product }}" role="button" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    {% endif %}
-
-                </div>
-
-                <div class="card-header px-4 pt-4 pb-0">
-
-                    {% for discount in product.discounts.all %}
-                        {% if discount.available %}
-                            <div class="card-actions float-end">
-                                <span class="badge bg-primary">
-                                    {{ discount.name }}
-                                </span>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-
-                    <h5 class="card-title mb-0">{{ product.name }}</h5>
-                    {% if product.available %}
-                        <div class="badge bg-success my-2">Disponível</div>
-                    {% else %}
-                        <div class="badge bg-danger my-2">Esgotado</div>
-                    {% endif %}
-                </div>
-                <div class="card-body px-4 pt-0">
-                    <div class="row">
-                        <div class="col-12">
-                            <p>R${{ product.price }}</p>
-                        </div>
-                        <div class="col-12">
-                            {% regroup product.inventories.all by color as color_list %}
-                            {% for color in color_list %}
-                                <p class="card-text mb-{% if forloop.last %}3{% else %}0{% endif %}">
-                                    <strong>{{ color.grouper }}</strong>
-                                    <br>
-                                    {% for c in color.list %}
-                                        <span class="badge bg-secondary">{{ c.size|upper }}</span>
-                                    {% endfor %}
-
-                                </p>
+            <div class="col-12 col-md-4 col-lg-4">
+                <div class="card">
+                    <div id="carouselIndicators{{ product }}" class="carousel slide" data-bs-ride="carousel">
+                        <ol class="carousel-indicators">
+                            {% for photo in product.photos.all %}
+                                <li data-bs-target="#carouselIndicators{{ product }}" data-bs-slide-to="{{ forloop.counter0 }}"
+                                    {% if photo.default %}
+                                        class="active" aria-current="true"
+                                    {% endif %}
+                                ></li>
+                            {% endfor %}
+                        </ol>
+                        <div class="carousel-inner">
+                            {% for photo in product.photos.all %}
+                                <div class="carousel-item {% if photo.default %}active{% endif %}">
+                                    <img class="d-block w-100" src="{{ photo }}" alt="{{ product.name }}">
+                                </div>
                             {% endfor %}
                         </div>
+
+                        {% if product.photos.all|length > 1 %}
+                            <a class="carousel-control-prev" href="#carouselIndicators{{ product }}" role="button" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselIndicators{{ product }}" role="button" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        {% endif %}
+
                     </div>
-                    <a href="#" class="card-link">Ver detalhes</a>
+
+                    <div class="card-header px-4 pt-4 pb-0">
+
+                        {% for discount in product.discounts.all %}
+                            {% if discount.available %}
+                                <div class="card-actions float-end">
+                                    <span class="badge bg-primary">{{ discount.name }}</span>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+
+                        <h5 class="card-title mb-0">{{ product.name }}</h5>
+                        {% if product.available %}
+                            <div class="badge bg-success my-2">Disponível</div>
+                        {% else %}
+                            <div class="badge bg-danger my-2">Esgotado</div>
+                        {% endif %}
+                    </div>
+                    <div class="card-body px-4 pt-0">
+                        <div class="row">
+                            <div class="col-12">
+                                <p>R${{ product.price }}</p>
+                            </div>
+                            <div class="col-12">
+                                {% regroup product.inventories.all by color as color_list %}
+                                {% for color in color_list %}
+                                    <p class="card-text mb-{% if forloop.last %}3{% else %}0{% endif %}">
+                                        <strong>{{ color.grouper }}</strong>
+                                        <br>
+                                        {% for c in color.list %}
+                                            <span class="badge bg-secondary">{{ c.size|upper }}</span>
+                                        {% endfor %}
+
+                                    </p>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <a href="#" class="card-link">Ver detalhes</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 </div>
