Sign In view, form and tets

--- a/app/core/templates/base.html
+++ b/app/core/templates/base.html
@@ -24,6 +24,15 @@
 			{% include 'partials/_nav.html' with user=user categories=categories %}
 
 			<main class="content">
+				{% if messages %}
+					{% for message in messages %}
+						<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+							<div class="alert-message">{{ message }}</div>
+						</div>
+					{% endfor %}
+				{% endif %}
+
 				{% block content %}{% endblock content %}
 			</main>
 
