Core views test

--- a/app/core/templates/partials/_nav.html
+++ b/app/core/templates/partials/_nav.html
@@ -35,7 +35,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
                         <i class="align-middle fas fa-fw fa-user-circle"></i>
-                        <span class="text-dark">{{ user }}</span>
+                        <span class="text-dark">{{ user.get_full_name }}</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end">
                         <a class="dropdown-item" href="pages-profile.html">
