Recover Password view and tests

--- a/app/core/templates/recover-password.html
+++ b/app/core/templates/recover-password.html
@@ -16,6 +16,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 	<link href="{% static 'css/light.css' %}" rel="stylesheet">
+	<link href="{% static 'css/custom.css' %}" rel="stylesheet">
 </head>
 
 <body data-theme="default" data-layout="fluid" data-sidebar-position="left" data-sidebar-behavior="sticky">
@@ -25,26 +26,77 @@
 				<div class="h-100">
 					<div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
 						<div class="d-table-cell align-middle">
-
+							{% if messages %}
+								{% for message in messages %}
+									<div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %} alert-outline alert-dismissible" role="alert">
+										<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+										<div class="alert-icon">
+											<i class="far fa-fw fa-bell"></i>
+										</div>
+										<div class="alert-message">{{ message }}</div>
+									</div>
+								{% endfor %}
+							{% endif %}
 							<div class="text-center mt-4">
 								<h1 class="h2">Esqueceu a senha?</h1>
 								<p class="lead">
-									Entre com o seu e-mail e você receberá em breve uma mensagem com as instruções para a troca da senha
+									Entre com o seu e-mail e nome completo cadastrado para continuar com a troca da senha
 								</p>
 							</div>
 
 							<div class="card">
 								<div class="card-body">
 									<div class="m-sm-4">
-										<form>
+										<form action="{% url 'sign-up' %}" method="post">
+											{% csrf_token %}
+											<div class="row">
+												<div class="mb-3 col-sm-12 col-md-6 col-lg-6">
+													<label class="form-label">{{ form.first_name.label }}</label>
+													{{ form.first_name }}
+
+													{% for error in form.first_name.errors %}
+														<label class="error small form-text invalid-feedback">{{ error }}</label>
+													{% endfor %}
+												</div>
+												<div class="mb-3 col-sm-12 col-md-6 col-lg-6">
+													<label class="form-label">{{ form.last_name.label }}</label>
+													{{ form.last_name }}
+													{% for error in form.last_name.errors %}
+														<label class="error small form-text invalid-feedback">{{ error }}</label>
+													{% endfor %}
+												</div>
+											</div>
 											<div class="mb-3">
-												<label class="form-label">E-mail</label>
-												<input class="form-control form-control-lg" type="email" name="email"
-													placeholder="Entre com o seu e-mail" />
+												<label class="form-label">{{ form.email.label }}</label>
+												{{ form.email }}
+
+												{% for error in form.email.errors %}
+													<label class="error small form-text invalid-feedback">{{ error }}</label>
+												{% endfor %}
+											</div>
+											<div class="mb-3">
+												<label class="form-label">{{ form.password.label }}</label>
+												{{ form.password }}
+
+												{% for text in form.password.help_text %}
+													<small>{{ text }}</small><br>
+												{% endfor %}
+
+												{% for error in form.password.errors %}
+													<label class="error small form-text invalid-feedback">{{ error }}</label>
+												{% endfor %}
+											</div>
+											<div class="mb-3">
+												<label class="form-label">{{ form.password_confirm.label }}</label>
+												{{ form.password_confirm }}
+
+												{% for error in form.password_confirm.errors %}
+													<label class="error small form-text invalid-feedback">{{ error }}</label>
+												{% endfor %}
 											</div>
 											<div class="text-center mt-3">
 												<button type="submit" class="btn btn-lg btn-primary">Enviar</button>
-												<a href="{% url 'sign-in' %}" class="btn btn-lg btn-link align-middle">Voltar</a>
+												<a href="{% url 'sign-in' %}" class="btn btn-lg btn-link">Voltar</a>
 											</div>
 										</form>
 									</div>
@@ -57,6 +109,8 @@
 			</div>
 		</main>
 	</div>
+
+	<script src="{% static 'js/app.js' %}"></script>
 
 </body>
 
