Changing form action to recover-password url

--- a/app/core/templates/recover-password.html
+++ b/app/core/templates/recover-password.html
@@ -47,7 +47,7 @@
 							<div class="card">
 								<div class="card-body">
 									<div class="m-sm-4">
-										<form action="{% url 'sign-up' %}" method="post">
+										<form action="{% url 'recover-password' %}" method="post">
 											{% csrf_token %}
 											<div class="row">
 												<div class="mb-3 col-sm-12 col-md-6 col-lg-6">
