--- a/app/core/templates/sign-in.html
+++ b/app/core/templates/sign-in.html
@@ -1,103 +1,55 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'auth.html' %}
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="E-commerce">
-	<meta name="author" content="Thiago Assis">
+{% block content %}
+<div class="text-center mt-4">
+	<h1 class="h2">Bem-vindo!</h1>
+	<p class="lead">
+		Entre na sua conta para continuar
+	</p>
+</div>
 
-	<title>E-commerce</title>
+<div class="card">
+	<div class="card-body">
+		<div class="m-sm-4">
+			<form action="{% url 'sign-in' %}" method="post">
+				{% csrf_token %}
+				<div class="mb-3">
+					<label class="form-label">{{ form.email.label }}</label>
+					{{ form.email }}
 
-	<link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
+					{% for error in form.email.errors %}
+						<label class="error small form-text invalid-feedback">{{ error }}</label>
+					{% endfor %}
 
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-
-	<link href="{% static 'css/light.css' %}" rel="stylesheet">
-	<link href="{% static 'css/custom.css' %}" rel="stylesheet">
-</head>
-
-<body data-theme="default" data-layout="fluid" data-sidebar-position="left" data-sidebar-behavior="sticky">
-	<div class="main d-flex justify-content-center w-100">
-		<main class="content d-flex p-0">
-			<div class="container d-flex flex-column">
-				<div class="h-100">
-					<div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
-						<div class="d-table-cell align-middle">
-							{% if messages %}
-								{% for message in messages %}
-									<div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %} alert-outline alert-dismissible" role="alert">
-										<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-										<div class="alert-icon">
-											<i class="far fa-fw fa-bell"></i>
-										</div>
-										<div class="alert-message">{{ message }}</div>
-									</div>
-								{% endfor %}
-							{% endif %}
-							<div class="text-center mt-4">
-								<h1 class="h2">Bem-vindo!</h1>
-								<p class="lead">
-									Entre na sua conta para continuar
-								</p>
-							</div>
-
-							<div class="card">
-								<div class="card-body">
-									<div class="m-sm-4">
-										<form action="{% url 'sign-in' %}" method="post">
-											{% csrf_token %}
-											<div class="mb-3">
-												<label class="form-label">{{ form.email.label }}</label>
-												{{ form.email }}
-
-												{% for error in form.email.errors %}
-													<label class="error small form-text invalid-feedback">{{ error }}</label>
-												{% endfor %}
-
-											</div>
-											<div class="mb-3">
-												<label class="form-label">{{ form.password.label }}</label>
-												{{ form.password }}
-												{% for error in form.password.errors %}
-													<label class="error small form-text invalid-feedback">{{ error }}</label>
-												{% endfor %}
-												<small>
-													<a href="{% url 'recover-password' %}">Esqueceu a senha?</a>
-												</small>
-											</div>
-											<div>
-												<div class="form-check align-items-center">
-													{{ form.remember_me }}
-													<label class="form-check-label text-small"
-														for="remember">{{ form.remember_me.label }}</label>
-												</div>
-											</div>
-											<div class="text-center mt-3">
-												<button type="submit" class="btn btn-lg btn-primary">Entrar</button>
-												<hr>
-												<span>
-													<a href="{% url 'home' %}" class="btn btn-lg btn-link align-middle">Página inicial</a>
-													ou
-													<a href="{% url 'sign-up' %}" class="btn btn-lg btn-link align-middle">Cadastrar</a>
-												</span>
-											</div>
-										</form>
-									</div>
-								</div>
-							</div>
-
-						</div>
+				</div>
+				<div class="mb-3">
+					<label class="form-label">{{ form.password.label }}</label>
+					{{ form.password }}
+					{% for error in form.password.errors %}
+						<label class="error small form-text invalid-feedback">{{ error }}</label>
+					{% endfor %}
+					<small>
+						<a href="{% url 'recover-password' %}">Esqueceu a senha?</a>
+					</small>
+				</div>
+				<div>
+					<div class="form-check align-items-center">
+						{{ form.remember_me }}
+						<label class="form-check-label text-small"
+							for="remember">{{ form.remember_me.label }}</label>
 					</div>
 				</div>
-			</div>
-		</main>
+				<div class="text-center mt-3">
+					<button type="submit" class="btn btn-lg btn-primary">Entrar</button>
+					<hr>
+					<span>
+						<a href="{% url 'home' %}" class="btn btn-lg btn-link align-middle">Página inicial</a>
+						ou
+						<a href="{% url 'sign-up' %}" class="btn btn-lg btn-link align-middle">Cadastrar</a>
+					</span>
+				</div>
+			</form>
+		</div>
 	</div>
-
-	<script src="{% static 'js/app.js' %}"></script>
-
-</body>
-
-</html>
+</div>
+{% endblock content %}
