Core view home product link

--- a/app/core/templates/index.html
+++ b/app/core/templates/index.html
@@ -74,7 +74,7 @@
                                 {% endfor %}
                             </div>
                         </div>
-                        <a href="#" class="card-link">Ver detalhes</a>
+                        <a href="{% url 'product-detail' id=product.id %}" class="card-link">Ver detalhes</a>
                     </div>
                 </div>
             </div>
